--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,11 +2,10 @@
 <!--[if lt IE 7]>      <html lang="en" ng-app="app" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html lang="en" ng-app="app" class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html lang="en" ng-app="app" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en" ng-app="app" class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en" ng-app="TestApp" class="no-js"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Spring boot and Angularjs Tutorial</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/app.css">
@@ -15,7 +14,7 @@
 <h2>Employee Management Panel</h2>
 <div class="home-section">
     <ul class="menu-list">
-        <li><a href="#/users">Users</a></li>
+        <!-- <li><a href="#/users">Users</a></li> -->
     </ul>
 </div>
 <div ng-view></div>	
