commiting changes for ems

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,7 +14,7 @@
 <h2>Employee Management Panel</h2>
 <div class="home-section">
     <ul class="menu-list">
-        <!-- <li><a href="#/users">Users</a></li> -->
+        <li><a href="#/users">Users</a></li>
     </ul>
 </div>
 <div ng-view></div>	
